--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     env_file:
       - src/configs/.env
     healthcheck: #проверка зпуска БД, чтобы приложение не пыталось запуститься до готовности СУБД принимать подключения.
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -29,6 +29,10 @@ services:
       - .:/app
     env_file:
       - src/configs/.env
+    command: >
+      sh -c "alembic -c alembic.ini upgrade head &&
+             alembic -c alembic.ini stamp head &&
+             uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
 
 volumes:
   database-service-volume:
