--- a/requirements.txt
+++ b/requirements.txt
@@ -14,22 +14,27 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+passlib==1.7.4
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyJWT==2.10.1
 python-dotenv==1.0.1
+python-json-logger==3.2.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==13.9.4
 rich-toolkit==0.13.2
 shellingham==1.5.4
 sniffio==1.3.1
+sqladmin==0.20.1
 SQLAlchemy==2.0.38
 starlette==0.45.3
 typer==0.15.1
@@ -38,3 +43,4 @@ uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
 websockets==15.0
+WTForms==3.1.2
